Point Century 3.2 and leaf biomass cohort library Cohort tests branch to work with biomasx extensions
git-svn-id: http://Marc-PC/svn/Full@2501 85f15e0e-5137-b144-a863-98bd542365a3

--- a/trunk/Century-succession/branches/version-LB-deploy/src/century-succession.csproj
+++ b/trunk/Century-succession/branches/version-LB-deploy/src/century-succession.csproj
@@ -41,15 +41,18 @@
     <Reference Include="Landis.Library.AgeOnlyCohorts">
       <HintPath>C:\Program Files\LANDIS-II\v6\bin\extensions\Landis.Library.AgeOnlyCohorts.dll</HintPath>
     </Reference>
+    <Reference Include="Landis.Library.Biomass">
+      <HintPath>..\..\..\..\..\..\..\..\..\Program Files\LANDIS-II\v6\bin\extensions\Landis.Library.Biomass.dll</HintPath>
+    </Reference>
+    <Reference Include="Landis.Library.BiomassCohorts">
+      <HintPath>..\..\..\..\..\..\..\..\..\Program Files\LANDIS-II\v6\bin\extensions\Landis.Library.BiomassCohorts.dll</HintPath>
+    </Reference>
     <Reference Include="Landis.Library.Climate, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Program Files\LANDIS-II\v6\bin\extensions\Landis.Library.Climate.dll</HintPath>
     </Reference>
     <Reference Include="Landis.Library.Cohorts">
       <HintPath>C:\Program Files\LANDIS-II\v6\bin\extensions\Landis.Library.Cohorts.dll</HintPath>
-    </Reference>
-    <Reference Include="Landis.Library.LeafBiomassCohorts">
-      <HintPath>C:\Program Files\LANDIS-II\v6\bin\extensions\Landis.Library.LeafBiomassCohorts.dll</HintPath>
     </Reference>
     <Reference Include="Landis.Library.Metadata, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -124,6 +127,12 @@
     <Compile Include="utility\Util.cs" />
     <Compile Include="utility\VersioningVerifier.cs" />
     <Compile Include="WoodLayer.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\leaf-biomass-cohort-library\branches\Cohort tests\src\leaf-biomass-cohort.csproj">
+      <Project>{04B8195A-44D7-44A3-B84B-E4CA6063BEED}</Project>
+      <Name>leaf-biomass-cohort</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
