--- a/trunk/biomass-succession/branches/v3.2/biomass-succession.csproj
+++ b/trunk/biomass-succession/branches/v3.2/biomass-succession.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{B696582D-362B-4902-9040-64365EABB93C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>biomass_succession</RootNamespace>
+    <RootNamespace>Landis.Extension.Succession.Biomass</RootNamespace>
     <AssemblyName>Landis.Extension.Succession.Biomass</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\Landis.Extension.Succession.Biomass.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -38,20 +39,24 @@
     <Reference Include="Landis.Core">
       <HintPath>C:\Program Files\LANDIS-II\v6\bin\6.0\Landis.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Landis.Library.AgeOnlyCohorts, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files\LANDIS-II\v6\bin\extensions\Landis.Library.AgeOnlyCohorts.dll</HintPath>
+    <Reference Include="Landis.Library.AgeOnlyCohorts-v2">
+      <HintPath>packages\Landis.Library.AgeOnlyCohorts.2.1.0-rc1\lib\net35\Landis.Library.AgeOnlyCohorts-v2.dll</HintPath>
     </Reference>
-    <Reference Include="Landis.Library.BiomassCohorts, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files\LANDIS-II\v6\bin\extensions\Landis.Library.BiomassCohorts.dll</HintPath>
+    <Reference Include="Landis.Library.Biomass-v1">
+      <HintPath>packages\Landis.Library.Biomass.1.0.0-rc1\lib\net35\Landis.Library.Biomass-v1.dll</HintPath>
+    </Reference>
+    <Reference Include="Landis.Library.BiomassCohorts-v1">
+      <HintPath>packages\Landis.Library.BiomassCohorts.1.3.0-rc1\lib\net35\Landis.Library.BiomassCohorts-v1.dll</HintPath>
     </Reference>
     <Reference Include="Landis.Library.Cohorts, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Program Files\LANDIS-II\v6\bin\extensions\Landis.Library.Cohorts.dll</HintPath>
     </Reference>
-    <Reference Include="Landis.Library.Succession">
-      <HintPath>C:\Program Files\LANDIS-II\v6\bin\extensions\Landis.Library.Succession.dll</HintPath>
+    <Reference Include="Landis.Library.Parameters-v1">
+      <HintPath>packages\Landis.Library.Parameters.1.0.0-rc1\lib\net35\Landis.Library.Parameters-v1.dll</HintPath>
+    </Reference>
+    <Reference Include="Landis.Library.Succession-v4">
+      <HintPath>packages\Landis.Library.Succession.4.0.0-rc1\lib\net35\Landis.Library.Succession-v4.dll</HintPath>
     </Reference>
     <Reference Include="Landis.SpatialModeling">
       <HintPath>C:\Program Files\LANDIS-II\v6\bin\6.0\Landis.SpatialModeling.dll</HintPath>
@@ -72,6 +77,7 @@
     <Compile Include="age-only-disturbances\ParameterDataset.cs" />
     <Compile Include="age-only-disturbances\PercentageTable.cs" />
     <Compile Include="age-only-disturbances\PoolPercentages.cs" />
+    <Compile Include="AssemblyInfo.cs" />
     <Compile Include="BaseCohortsSiteVar.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -99,7 +105,9 @@
     <Compile Include="utility\IntPixel.cs" />
     <Compile Include="utility\Util.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy $(TargetName).* "C:\Program Files\LANDIS-II\v6\bin\extensions"</PostBuildEvent>
