--- a/trunk/biomass-succession/trunk/src/biomass-succession.csproj
+++ b/trunk/biomass-succession/trunk/src/biomass-succession.csproj
@@ -39,14 +39,16 @@
     <Reference Include="Landis.Core">
       <HintPath>C:\Program Files\LANDIS-II\v6\bin\6.0\Landis.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Landis.Library.AgeOnlyCohorts-v2">
-      <HintPath>packages\Landis.Library.AgeOnlyCohorts.2.1.0-rc1\lib\net35\Landis.Library.AgeOnlyCohorts-v2.dll</HintPath>
+    <Reference Include="Landis.Library.AgeOnlyCohorts, Version=2.1.5520.27428, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\Landis.Library.AgeOnlyCohorts.2.1.0-rc2\lib\net35\Landis.Library.AgeOnlyCohorts.dll</HintPath>
     </Reference>
     <Reference Include="Landis.Library.Biomass-v1">
-      <HintPath>packages\Landis.Library.Biomass.1.0.0-rc1\lib\net35\Landis.Library.Biomass-v1.dll</HintPath>
+      <HintPath>packages\Landis.Library.Biomass.1.0.0-rc2\lib\net35\Landis.Library.Biomass-v1.dll</HintPath>
     </Reference>
-    <Reference Include="Landis.Library.BiomassCohorts-v1">
-      <HintPath>packages\Landis.Library.BiomassCohorts.1.3.0-rc1\lib\net35\Landis.Library.BiomassCohorts-v1.dll</HintPath>
+    <Reference Include="Landis.Library.BiomassCohorts, Version=1.3.5520.27608, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\Landis.Library.BiomassCohorts.1.3.0-rc2\lib\net35\Landis.Library.BiomassCohorts.dll</HintPath>
     </Reference>
     <Reference Include="Landis.Library.Cohorts, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -55,8 +57,9 @@
     <Reference Include="Landis.Library.Parameters-v1">
       <HintPath>packages\Landis.Library.Parameters.1.0.0-rc1\lib\net35\Landis.Library.Parameters-v1.dll</HintPath>
     </Reference>
-    <Reference Include="Landis.Library.Succession-v4">
-      <HintPath>packages\Landis.Library.Succession.4.0.0-rc1\lib\net35\Landis.Library.Succession-v4.dll</HintPath>
+    <Reference Include="Landis.Library.Succession, Version=4.0.5521.15032, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\Landis.Library.Succession.4.0.0-rc2\lib\net35\Landis.Library.Succession.dll</HintPath>
     </Reference>
     <Reference Include="Landis.SpatialModeling">
       <HintPath>C:\Program Files\LANDIS-II\v6\bin\6.0\Landis.SpatialModeling.dll</HintPath>
