--- a/trunk/age-only-succession/trunk/src/age only successsion.csproj
+++ b/trunk/age-only-succession/trunk/src/age only successsion.csproj
@@ -67,10 +67,13 @@
     <Compile Include="InputParameters.cs" />
     <Compile Include="InputParametersParser.cs" />
     <Compile Include="PlugIn.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AssemblyInfo.cs" />
     <Compile Include="SiteVars.cs" />
     <Compile Include="SpeciesAuxParm.cs" />
     <Compile Include="SpeciesData.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
